# rt-detr-barcode-detection

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
configs/: data.yaml  train_eval.yaml
scripts/: visualize_coco_dataset.py  visualize_preds.py
source/: base_config.py  constants.py  logger.py
source/cfg_templates/: runtime.yml
source/cfg_templates/dataset/: coco_detection.yml
source/cfg_templates/rtdetr/: rtdetr_r101vd_6x_coco.yml  rtdetr_r18vd_6x_coco.yml  rtdetr_r34vd_6x_coco.yml  rtdetr_r50vd_m_6x_coco.yml
source/cfg_templates/rtdetr/include/: dataloader.yml  optimizer.yml  rtdetr_r50vd.yml
source/data/: clearml_utils.py  config.py  constants.py  dir_utils.py
source/data/fetch/: clearml_versioning.py  core.py  logger.py  main.py
source/data/prep/: clearml_versioning.py  dir_utils.py  logger.py  main.py
source/data/prep/core/: export_coco.py  pipe.py  split.py
source/train_eval/: clearml_tracking.py  constants.py  logger.py  main.py  model_export.py  rtdetr_configurator.py
source/train_eval/config/: clearml_cfg.py  data_cfg.py  data_source_cfg.py  det_model_cfg.py  runtime_cfg.py  train_eval_cfg.py  training_cfg.py
source/train_eval/evaluation/: data_model.py  evaluate.py  inference.py  metrics_calculation.py  metrics_utils.py  results_export.py  visualization.py
source/train_eval/pathfinding/: inputs.py  outputs.py
source/train_eval/training/: pretrain_loading.py  train.py
