[tool.poetry]
name = "rt-detr-barcode-detection"
version = "0.1.0"
description = ""
authors = ["vladimir-sashin <sashin.v.a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
clearml = "^1.15.1"


[tool.poetry.group.CI.dependencies]
wemake-python-styleguide = "^0.19.2"
pre-commit = "^3.7.0"


[tool.poetry.group.rtdetr.dependencies]
torch = "2.0.1"
torchvision = "0.15.2"
onnx = "1.14.0"
pycocotools = "^2.0.7"
pyyaml = "^6.0.1"
scipy = "^1.13.0"
tensorboard = "^2.16.2"


[tool.poetry.group.data.dependencies]
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
fiftyone = "^0.23.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
